--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -8,8 +8,6 @@
     android:gravity="center_vertical">
 
     <androidx.cardview.widget.CardView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -25,40 +23,20 @@
             android:layout_marginLeft="25sp">
 
             <TextView
-                android:id="@+id/usernameTextView"
+                android:id="@+id/commentTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Username"
-                android:textSize="28sp"
+                android:text=""
+                android:textSize="18sp"
                 android:textStyle="bold"/>
 
-            <TextView
-                android:id="@+id/reportsTextView"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Reports"
-                android:textSize="23sp"
-                android:layout_marginLeft="10sp"/>
-
-            <TextView
-                android:id="@+id/ratingsTextView"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Ratings"
-                android:textSize="23sp"
-                android:layout_marginLeft="10sp"/>
-
-            <TextView
-                android:id="@+id/postsTextView"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Posts"
-                android:textSize="23sp"
-                android:layout_marginLeft="10sp"/>
+            <Button
+                android:id="@+id/removeCommentButton"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_marginLeft="10sp"
+                android:background="@drawable/ic_cross" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </FrameLayout>
