--- a/app/src/main/res/layout/fragment_post_overview.xml
+++ b/app/src/main/res/layout/fragment_post_overview.xml
@@ -2,43 +2,43 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-       android:layout_height="600dp"
-    android:layout_margin="50dp">
+    android:layout_height="match_parent"
+    android:layout_margin="10dp">
 
     <TextView
         android:id="@+id/postTitleTextView"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="24dp"
         android:gravity="center"
-        android:layout_height="wrap_content"
         android:text="Post Title"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/ratingTextView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5" />
+        app:layout_constraintVertical_bias="0.060000002" />
 
     <TextView
         android:id="@+id/ratingTextView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="24dp"
+        android:drawableEnd="@drawable/ic_star"
         android:text="Score: 0"
         android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/postTitleTextView"
         app:layout_constraintBottom_toTopOf="@+id/videoPlayer"
-        android:drawableEnd="@drawable/ic_star"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <VideoView
         android:id="@+id/videoPlayer"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="200dp"
-        app:layout_constraintBottom_toTopOf="@+id/cityTextView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ratingTextView" />
 
@@ -48,60 +48,55 @@
         android:layout_height="wrap_content"
         android:text="City"
         android:textSize="16sp"
-        app:layout_constraintTop_toTopOf="@id/yourListViewId"
         app:layout_constraintEnd_toStartOf="@+id/dateTextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/videoPlayer" />
 
     <TextView
         android:id="@+id/dateTextView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="24dp"
         android:text="Date"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@+id/videoPlayer"
-        app:layout_constraintTop_toBottomOf="@+id/videoPlayer"
-        app:layout_constraintTop_toTopOf="@id/yourListViewId"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/videoPlayer" />
 
-    <ListView
-        android:id="@+id/yourListViewId"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="32dp"
-        android:dividerHeight="0.5dp"
-        app:layout_constraintBottom_toTopOf="@+id/userListHeader"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/commentRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_gravity="start"
+        android:layout_marginTop="8dp"
+        app:layoutManager="LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/dateTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/cityTextView" />
 
     <LinearLayout
         android:id="@+id/userListHeader"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="16dp"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/yourListViewId"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/commentRecyclerView">
 
         <Button
             android:id="@+id/btnRemove"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:backgroundTint="#F36363"
             android:onClick="onFilterButtonClick"
             android:text="REMOVE"
-            android:textSize="14sp"
             android:textColor="@color/white"
-            android:textStyle="bold"
-            android:backgroundTint="#F36363"/>
+            android:textSize="14sp"
+            android:textStyle="bold" />
     </LinearLayout>
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
