--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -27,8 +27,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text=""
-                android:textSize="18sp"
+                android:text="DUmmy text"
+                android:textSize="16sp"
                 android:textStyle="bold"/>
 
             <Button
